--- a/manifests/xdebug.ini
+++ b/manifests/xdebug.ini
@@ -1,4 +1,8 @@
 zend_extension=/usr/lib/php5/20090626+lfs/xdebug.so
-xdebug.remote_enable = on
+xdebug.remote_enable = off
+xdebug.remote_port = 9000
 xdebug.remote_handler = dbgp
 xdebug.remote_connect_back = on
+xdebug.remote_autostart=1
+
+xdebug.var_display_max_depth=5
